--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -78,11 +78,9 @@ layout: default
         (d.head || d.body).appendChild(s);
     })();
 </script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-
+<noscript>需要启用JavaScript查看 <a href="https://disqus.com/?ref_noscript" rel="nofollow">评论插件 powered by Disqus.</a></noscript>
 
 <!-- disqus end -->
-
 
 <!-- async load function -->
 <script>
